# fused

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  main.cpp  readme.rst
boards/: Board.hpp  CMakeLists.txt  Cm0SensorNode.cpp  Cm0SensorNode.hpp  Cm0TestBoard.cpp  Cm0TestBoard.hpp  MemicBoard.cpp  MemicBoard.hpp  Msp430FR5994Launchpad.cpp  Msp430TestBoard.cpp  Msp430TestBoard.hpp
cmake/: InstallDependencies.cmake  Utilities.cmake
config/: Cm0SensorNode-config.yml  Cm0TestBoard-config.yml  Lux_14Oct21.csv  MemicBoard-config.yml  Msp430TestBoard-config.yml  boot-trace.csv  coeffs.yaml  config.yaml.in  vsweep-current.csv
include/: cm0-fused.h  fused.h  memic-fused.h  (+2 more)
mcu/: BankedMemory.cpp  BankedMemory.hpp  Bus.cpp  Bus.hpp  BusTarget.cpp  BusTarget.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  CacheController.cpp  CacheController.hpp  CacheReplacementPolicies.hpp  ClockDivider.hpp  ClockMux.hpp  ClockSourceChannel.hpp  ClockSourceIf.hpp  Cm0Microcontroller.cpp  Cm0Microcontroller.hpp  DummyPeripheral.cpp  DummyPeripheral.hpp  DynamicClock.cpp  DynamicClock.hpp  GenericDma.cpp  GenericDma.hpp  GenericMemory.cpp  GenericMemory.hpp  MemicMicrocontroller.cpp  MemicMicrocontroller.hpp  Microcontroller.cpp  Microcontroller.hpp  Msp430Microcontroller.cpp  Msp430Microcontroller.hpp  NonvolatileMemory.cpp  NonvolatileMemory.hpp  PowerController.cpp  PowerController.hpp  RegisterFile.cpp  RegisterFile.hpp  SpiTransactionExtension.hpp  VolatileMemory.hpp
mcu/cortex-m0/: .gitignore  CMakeLists.txt  CortexM0Cpu.cpp  CortexM0Cpu.hpp  Dma.cpp  Dma.hpp  Gpio.cpp  Gpio.hpp  Nvic.cpp  Nvic.hpp  OutputPort.hpp  README.md  Spi.cpp  Spi.hpp  SysTick.cpp  SysTick.hpp  UndoLogger.cpp  UndoLogger.hpp  decode.c  decode.h  exmemwb.c  exmemwb.h  exmemwb_arith.c  exmemwb_branch.c  exmemwb_logic.c  exmemwb_mem.c  exmemwb_misc.c  sim_support.c  sim_support.h
mcu/msp430fr5xx/: Adc12.cpp  Adc12.hpp  CMakeLists.txt  ClockSystem.cpp  ClockSystem.hpp  DigitalIo.cpp  DigitalIo.hpp  Dma.cpp  Dma.hpp  Frctl_a.cpp  Frctl_a.hpp  InterruptArbiter.hpp  Mpy32.cpp  Mpy32.hpp  Msp430Cpu.cpp  Msp430Cpu.hpp  PowerManagementModule.cpp  PowerManagementModule.hpp  TimerA.cpp  TimerA.hpp  eUSCI_B.cpp  eUSCI_B.hpp
ps/: CMakeLists.txt  Capacitor.hpp  ConstantCurrentState.hpp  ConstantEnergyEvent.hpp  Converters.hpp  DynamicEnergyChannel.hpp  DynamicEnergyIf.hpp  EnergyConsumer.cpp  EnergyConsumer.hpp  EnergyProducer.cpp  EnergyProducer.hpp  EventLog.cpp  EventLog.hpp  ExternalCircuitry.hpp  LinearRegulator.hpp  PowerCalculator.cpp  PowerCalculator.hpp  PowerCombine.hpp  PowerModelBridge.hpp  PowerModelChannel.cpp  PowerModelChannel.hpp  PowerModelChannelIf.hpp  PowerModelEventBase.hpp  PowerModelEventChannel.cpp  PowerModelEventChannel.hpp  PowerModelEventChannelIf.hpp  PowerModelStateBase.hpp  PowerSupplies.hpp  PvCell.cpp  PvCell.hpp  SupplyVoltageSupervisor.hpp
sd/: Accelerometer.cpp  Accelerometer.hpp  Bme280.cpp  Bme280.hpp  CMakeLists.txt  DummySpiDevice.cpp  DummySpiDevice.hpp  LoopBackWire.cpp  LoopBackWire.hpp  Nrf24Radio.cpp  Nrf24Radio.hpp  SpiDevice.cpp  SpiDevice.hpp  SpiLoopBack.cpp  SpiLoopBack.hpp  SpiWire.cpp  SpiWire.hpp  nRF24L01.h
sw/: CMakeLists.txt  buildall.sh
sw/cmake/: cm0-toolchain.cmake  common.cmake  msp430-toolchain.cmake  tail.cmake
sw/cmsis/: core_cm0.h  core_cmFunc.h  core_cmInst.h
sw/microbenchmarks/: CMakeLists.txt  fram_kernels.S  fram_kernels.h  run_copy.c  run_test.c  sram_kernels.S  sram_kernels.h
sw/microbenchmarks/copykernels/: CMakeLists.txt  run_copy.c
sw/support/: CMakeLists.txt  cm0-support.c  cm0-support.h  cm0-vectors.c  cm0.h  cm0.ld  msp430-support.c  msp430-support.h  msp430fr5994-FS.ld  support.h
sw/validation/: CMakeLists.txt
sw/validation/Cm0SensorNode/: CMakeLists.txt
sw/validation/Cm0SensorNode/accelerometer/: CMakeLists.txt  accelerometer.h  main.c  stm32f0_spi.h
sw/validation/Cm0SensorNode/bme280/: CMakeLists.txt  main.c
sw/validation/Cm0TestBoard/: CMakeLists.txt
sw/validation/Cm0TestBoard/cache-atomic-support/: CMakeLists.txt  main.c
sw/validation/Cm0TestBoard/dma/: CMakeLists.txt  dma_defs.h  main.c
sw/validation/Cm0TestBoard/mathtest/: CMakeLists.txt  main.c
sw/validation/Cm0TestBoard/nvic/: CMakeLists.txt  main.c
sw/validation/Cm0TestBoard/spi/: main.c
sw/validation/Msp430TestBoard/: CMakeLists.txt
sw/validation/Msp430TestBoard/dma/: CMakeLists.txt  main.c
sw/validation/Msp430TestBoard/mathtest/: main.c
sw/validation/Msp430TestBoard/spi/: eusci_b_spi.c  main.c
sw/validation/Msp430TestBoard/support/: main.c  msp430-support.c  msp430-support.h  msp430fr5994-SS.ld  support.h
sw/validation/cm0/: CMakeLists.txt
sw/validation/cm0/spi/: CMakeLists.txt
sw/validation/cm0/systick/: CMakeLists.txt  main.c
sw/validation/msp430/: CMakeLists.txt
sw/validation/msp430/bme280/: CMakeLists.txt  bme280.h  eusci_b_spi.h  gpio.c  gpio.h  main.c
sw/validation/msp430/dma/: main.c
sw/validation/msp430/mathtest/: CMakeLists.txt
sw/validation/msp430/spi/: CMakeLists.txt  eusci_b_spi.h  main.c
sw/validation/msp430/spitest/: CMakeLists.txt  eusci_b_spi.c  eusci_b_spi.h  main.c
sw/validation/msp430/spitest/inc/: hw_memmap.h  msp430fr5994.h
sw/validation/msp430/support/: CMakeLists.txt  msp430fr5994-FF.ld  msp430fr5994-SF.ld
test/: CMakeLists.txt  README.md  test_Accelerometer.cpp  test_Bme280.cpp  test_Cache.cpp  test_CacheController.cpp  test_ClockSourceChannel.cpp  test_DigitalIo.cpp  test_PowerModelChannel.cpp  test_PowerModelEventChannel.cpp  test_RegisterFile.cpp  test_SpiDevice.cpp  test_UndoLogger.cpp  test_cm0Dma.cpp  test_cm0Nvic.cpp  test_cm0Spi.cpp  test_cm0SysTick.cpp  test_eUSCI_B.cpp  test_msp430fr5xxClockSystem.cpp  test_msp430fr5xxCpu.cpp  test_msp430fr5xxDma.cpp  test_msp430fr5xxTimerA.cpp  test_msp430fr5xxeUsciB.cpp  test_nrf24Radio.cpp  test_writeTracker.cpp
utilities/: BoolLogicConverter.hpp  CMakeLists.txt  Config.cpp  Config.hpp  IoSimulationStopper.hpp  SimpleMonitor.hpp  SimulationController.cpp  SimulationController.hpp  Utilities.cpp  Utilities.hpp  WriteTracker.hpp
(+13 files in other folders)
